<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Activities.MainActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edt_txt_input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColorHint="@color/colorPrimary"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/entermail_login_ET"
            android:drawableLeft="@drawable/email"
            android:drawablePadding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter Mail"
            android:inputType="textEmailAddress"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edt_txt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColorHint="@color/colorPrimary"
        app:errorEnabled="true">
        <EditText
            android:id="@+id/enterpassword_login_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="10dp"
            android:hint="Enter Password"
            android:textColor="#000"
            android:inputType="textPassword"
            />
    </android.support.design.widget.TextInputLayout>

    <com.victor.loading.rotate.RotateLoading
        android:id="@+id/rotateloading"
        android:visibility="gone"
        android:layout_gravity="center"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:loading_width="5dp"
        app:loading_color="#F8A425"
        android:layout_centerInParent="true"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColorHint="@color/colorPrimary"
        app:errorEnabled="true">

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="LogIn"
            android:alpha="0.8"
            android:textColor="#fff"
            android:backgroundTint="@color/colorPrimary"

            />

    </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_margin="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dashes"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textSize="25sp"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dashes"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>
    <TextView
        android:clickable="true"
        android:id="@+id/registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_a_new_account"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:textSize="18sp"
        android:contextClickable="true"
        android:textColor="@color/colorPrimary" />

</LinearLayout>